--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
